main: created pages about and posts to add routing, added navbar

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -6,7 +6,8 @@
 
 #root {
     display: flex;
-    justify-content: center;
+    flex-direction: column;
+    align-items: center;
 }
 
 .App {
@@ -56,4 +57,17 @@
     border: 2px solid orange;
     font-weight: bold;
     color: orange;
+}
+
+.navbar {
+    height: 50px;
+    width: 100vw;
+    display: flex;
+    align-items: center;
+    padding: 0 15px;
+    background: lightgray;
+}
+
+.navbar__link {
+    margin-left: auto;
 }
